# fastapi-redis-streams

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: dependencies.py  exceptions.py  main.py  server.py  tasks.py  worker.py
app/configs/: environment.py  redis.py
app/routes/: routes.py
app/services/: redis.py
